# optispoons

./: .env  .gitignore  Dockerfile  README.md  example_output.json  fly.toml  main.py  models.py  pyproject.toml  test_main.py  tests.http
app/: main.py  models.py
notebooks/: Optispoons.ipynb
tests/: functional.py  test_functional.py  test_requests.http  test_unit.py
tests/http/: test_flyio_requests.http
