[tool.poetry]
name = "optispoons"
version = "0.1.0"
description = ""
authors = ["Mark Dunne <markdunne@improbable.io>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
fastapi = "^0.78.0"
diskcache = "^5.4.0"
uvicorn = "^0.17.6"
numpy = "^1.22.4"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
jupyter = "^1.0.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
